linear-algebra/solvers/durbin/woven_code/.compile.err
warning: OpenMP support for version 51 in flang is still incomplete
error: Semantic errors in /root/polybench-metafor/linear-algebra/solvers/durbin/woven_code/durbin.preproc.f90
/root/polybench-metafor/linear-algebra/solvers/durbin/woven_code/durbin.preproc.f90:85:20: error: The SIZES clause has more entries than there are nested canonical loops.
          !$omp tile sizes(32,32)
                     ^^^^^^^^^^^^
/root/polybench-metafor/linear-algebra/solvers/durbin/woven_code/durbin.preproc.f90:100:20: error: The SIZES clause has more entries than there are nested canonical loops.
          !$omp tile sizes(32,32)
                     ^^^^^^^^^^^^
